--- a/branches/MonoGame/Projektimallit/WP81/FysiikkaPeli_Physics2d_WP81/FysiikkaPeliWP81.csproj
+++ b/branches/MonoGame/Projektimallit/WP81/FysiikkaPeli_Physics2d_WP81/FysiikkaPeliWP81.csproj
@@ -111,7 +111,7 @@
     <Content Include="Assets\WideLogo.scale-240.png" />
   </ItemGroup>
   <ItemGroup>
-	<Folder Include="Content\" />
+    <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
