--- a/branches/MonoGame/Projektimallit/WP81/Tasohyppelypeli_WP81/TasohyppelyWP81.csproj
+++ b/branches/MonoGame/Projektimallit/WP81/Tasohyppelypeli_WP81/TasohyppelyWP81.csproj
@@ -109,10 +109,15 @@
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
-    <Content Include="Content\kentta1.txt" />
-    <Content Include="Content\maali.wav" />
-    <Content Include="Content\norsu.png" />
-    <Content Include="Content\tahti.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <MonoGameContentReference Include="Content\Content.mgcb" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Content\kentta1.txt" />
+    <None Include="Content\maali.wav" />
+    <None Include="Content\norsu.png" />
+    <None Include="Content\tahti.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
